# re-x

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: engine_bench.rs
skills/agents-md/: AGENTS.md
skills/claude-code/: SKILL.md
skills/cursorrules/: .cursorrules
skills/cursorrules/.cursor/rules/: regex-testing.mdc
skills/regex-testing/: SKILL.md
src/: cli.rs  main.rs  mcp.rs
src/core/: benchmark.rs  engine.rs  explain.rs  from_examples.rs  mod.rs  portability.rs  replace.rs  templates.rs  test.rs  validate.rs
src/output/: json.rs  mod.rs  text.rs  types.rs
tests/: cli_test.rs
