[package]
name = "re-x"
version = "0.1.0"
edition = "2021"
authors = ["re-x contributors"]
description = "AI-native regex CLI — Test, validate, explain. Built for coding agents."
license = "MIT"
repository = "https://github.com/re-x-ai/re-x"
readme = "README.md"
keywords = ["regex", "cli", "ai", "mcp", "testing"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
exclude = [".github/", ".claude/", "skills/", "benches/", "AGENTS.md", "CONTRIBUTING.md", "SECURITY.md"]

[features]
default = ["cli", "mcp"]
cli = ["clap"]
mcp = []
full = ["cli", "mcp"]

[dependencies]
# Core regex engines
regex = "1"
fancy-regex = "0.17"
regex-syntax = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
criterion = "0.8"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bench]]
name = "engine_bench"
harness = false

[[bin]]
name = "re-x"
path = "src/main.rs"
